+ add org.dcm4che.data.DcmObject#getPrivateCreatorID
+ org.dcm4che.data.DcmObject#put??(tag, value) except value=null 
+ add org.dcm4che.data.Tags#valueOf(short,short)
+ add org.dcm4che.data.DcmElement#getDateRange
+ add org.dcm4che.media.DirBuilder#getDirWriter
+ add org.dcm4che.net.FutureRSP#listPending
+ add org.dcm4che.net.DcmServiceBase.MultiDimseRsp#release
+ add org.dcm4che.net.Association#getAAssociateRQ
+ add org.dcm4che.net.Association#getAAssociateAC
+ add org.dcm4che.net.Association#getAAssociateRJ
+ add org.dcm4che.net.Association#getAAbort
+ add org.dcm4che.net.DcmServiceException
+ add org.dcm4che.net.AAssociateAC#countAcceptedPresContext
+ add org.dcm4che.net.AAssociation#countAcceptedPresContext
+ add org.dcm4che.net.AAssociation#listAcceptedPresContext
+ make org.dcm4cheri.data.DcmParserImpl tolerant for redundant
  Sequence Delimiter Items of Sequences with explicit length encoding
+ add org.dcm4che.data.FileMetaInfo#getImplementationClassUID
+ add org.dcm4che.data.FileMetaInfo#getImplementationVersionName
+ add org.dcm4che.dict.Status

CHANGES:
dcm4che API:
+ rename org.dcm4che.net.Factory to org.dcm4che.net.AssociationFactory
+ relax VR value check for most VR types to log warning insteed
  throw IllegalValueException
+ org.dcm4che.data.DcmObject#get??(tag, index)
  return null/0, if index >= vm(), instead throw RuntimeException

-------------------------------------------------------------------------------
dcm4che 1.0.2 -  - Changes since dcm4che 1.0.1
-------------------------------------------------------------------------------
DISTRIBUTION:
+ demo -> samples
+ include javadoc

BUG FIXES:
org.dcm4cheri.data
+ Fix DcmObject.putUT (inserted element returned wrong vr(=UL))
+ Fix BaseDatasetImpl.calcLength (ArrayOutOfBoundsException if #groups=8^n)
org.dcm4che.imageio.plugins.DcmMetadataFormat*
  Add missing definitions for "pos" attribute of elements "elm", "item", "frag"
org.dcm4cheri.media: